# Cross-platform-build-environment

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.claude/skills/add-library/: SKILL.md
cmake/: BuildConfig.cmake  SuperBuild.cmake  install_project.cmake
cmake/modules/: BinaryDeps.cmake  CmakeEnum.cmake  CompilerWarnings.cmake  CrossCompileHelpers.cmake  FindPhysFS.cmake  GitVersion.cmake  InstallHelpers.cmake  Sanitizers.cmake  StripDebug.cmake
cmake/toolchains/: Clang.cmake  RaspberryPi1.cmake  RaspberryPi2.cmake  RaspberryPi3.cmake  RaspberryPi4.cmake  RaspberryPi5.cmake  Ubuntu2004.cmake  Ubuntu2404.cmake  Yocto.cmake  common.cmake
docs/: build-system-getting-started.md  build-system-ide-setup.md  build-system-overview.md  build-system-spec-external.md  build-system-spec-modules.md  build-system-spec-presets.md  build-system-toolchains.md  build_system-getting-started.md  build_system-ide-setup.md  build_system-overview.md  build_system-spec-modules.md  build_system-spec-toolchain.md  build_system-toolchains.md  getting-started.md  ide-setup.md  overview.md  spec-external.md  spec-modules.md  spec-presets.md  spec-toolchain.md  toolchains.md
scripts/: build-system-build.sh  build-system-deploy.sh  build-system-get-sysroot-rpi.sh  build-system-get-sysroot-yocto.sh  build-system-install-toolchains.sh  build-system-sync-sysroot.sh  build-system-update-hashes.sh  build.sh  build_system-build.sh  build_system-deploy.sh  build_system-get-sysroot-rpi.sh  build_system-get-sysroot-yocto.sh  build_system-install-toolchains.sh  build_system-sync-sysroot.sh  common.sh  deploy.sh  get-sysroot-rpi.sh  get-sysroot-yocto.sh  install-toolchains.sh  sync-sysroot.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_imgproc.cpp
