# src/CMakeLists.txt
# Додайте тут ваші цілі (add_library / add_executable).
# Приклад:
#
# add_executable(my_app main.cpp)
# target_include_directories(my_app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
# target_enable_warnings(my_app STRICT)
# if(ENABLE_ASAN)
#     target_enable_sanitizers(my_app ASAN UBSAN)
# endif()
