# tests/CMakeLists.txt
# Підключення Google Test через FetchContent та реєстрація тестів.
# Розкоментуйте та адаптуйте під ваш проєкт.

# include(FetchContent)
# FetchContent_Declare(
#     googletest
#     GIT_REPOSITORY https://github.com/google/googletest.git
#     GIT_TAG        v1.14.0
# )
# FetchContent_MakeAvailable(googletest)
#
# add_executable(my_tests test_main.cpp)
# target_link_libraries(my_tests PRIVATE GTest::gtest_main my_lib)
# target_enable_warnings(my_tests)
#
# include(GoogleTest)
# gtest_discover_tests(my_tests)
